--- a/Source/Falcon/src/Falcon.Web.Api/Falcon.Web.Api.csproj
+++ b/Source/Falcon/src/Falcon.Web.Api/Falcon.Web.Api.csproj
@@ -294,6 +294,7 @@
     <Content Include="packages.config" />
     <None Include="Properties\PublishProfiles\ApiAsp.pubxml" />
     <None Include="Properties\PublishProfiles\Chimishod.pubxml" />
+    <None Include="Properties\PublishProfiles\VPS.pubxml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
