--- a/Source/Falcon/src/Falcon.Web.Api/Web.config
+++ b/Source/Falcon/src/Falcon.Web.Api/Web.config
@@ -38,7 +38,7 @@
     
     <!--Local Conncetion-->
     
-    <add name="DbEntity" connectionString="metadata=res://*/DbModel.WhatIfDataModel.csdl|res://*/DbModel.WhatIfDataModel.ssdl|res://*/DbModel.WhatIfDataModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-IBHM4S7;initial catalog=what_if;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="DbEntity" connectionString="metadata=res://*/DbModel.WhatIfDataModel.csdl|res://*/DbModel.WhatIfDataModel.ssdl|res://*/DbModel.WhatIfDataModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.;initial catalog=what_if;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
     <add name="UserDataContext" connectionString="Data Source=(localdb)\MSSQLLocalDB; Initial Catalog=UserDataContext-20170110183041; Integrated Security=True; MultipleActiveResultSets=True; AttachDbFilename=|DataDirectory|UserDataContext-20170110183041.mdf" providerName="System.Data.SqlClient" />
     <add name="HangFire" connectionString="Data Source=DESKTOP-IBHM4S7;Initial Catalog=HangFire;Integrated Security=True" />
     
