refactoring achievement and continuing on new achievement system

--- a/Source/Falcon/src/Falcon.EFCommonContext/Falcon.EFCommonContext.csproj
+++ b/Source/Falcon/src/Falcon.EFCommonContext/Falcon.EFCommonContext.csproj
@@ -83,6 +83,9 @@
     <Compile Include="DbModel\AchievementQueryType.cs">
       <DependentUpon>WhatIfDataModel.tt</DependentUpon>
     </Compile>
+    <Compile Include="DbModel\AchievementStatistic.cs">
+      <DependentUpon>WhatIfDataModel.tt</DependentUpon>
+    </Compile>
     <Compile Include="DbModel\AchieveStateType.cs">
       <DependentUpon>WhatIfDataModel.tt</DependentUpon>
     </Compile>
