--- a/Source/Falcon/src/Falcon.Web.Api/Falcon.Web.Api.csproj
+++ b/Source/Falcon/src/Falcon.Web.Api/Falcon.Web.Api.csproj
@@ -155,6 +155,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="App_Start\AutoMapperConfiguration.cs" />
+    <Compile Include="AutoMappingConfiguration\AchievementMap\AchievementStatisticToSAchievementStatistic.cs" />
     <Compile Include="AutoMappingConfiguration\AppAdvertisementsMap\AppAdvertisementsToSAppAdvertAutoTypeConfiguration.cs" />
     <Compile Include="AutoMappingConfiguration\ApplicationStateMap\ApplicationStateToClientAppStateAutoTypeConfiguration.cs" />
     <Compile Include="AutoMappingConfiguration\ApplicationStateMap\ApplicationStateToSApplicationStateAutoTypeConfiguration.cs" />
@@ -220,6 +221,7 @@
     <Compile Include="JobSystem\Private\JobManager.cs" />
     <Compile Include="JobSystem\Private\Jobs\CharacterRankUpdate.cs" />
     <Compile Include="JobSystem\Private\Jobs\GlobalRankUpdate.cs" />
+    <Compile Include="JobSystem\Private\Jobs\QuestionQualification.cs" />
     <Compile Include="JobSystem\Public\IJob.cs" />
     <Compile Include="JobSystem\Public\JobBase.cs" />
     <Compile Include="JobSystem\Public\IJobManager.cs" />
