--- a/Source/Falcon/src/Falcon.Database/Falcon.Database.csproj
+++ b/Source/Falcon/src/Falcon.Database/Falcon.Database.csproj
@@ -68,6 +68,7 @@
     <Compile Include="SqlServer\QueryProcessors\MarketInfoQueryProcessor.cs" />
     <Compile Include="SqlServer\QueryProcessors\NotificationsQueryProcessor.cs" />
     <Compile Include="SqlServer\QueryProcessors\AppAdvertsQueryProcessor.cs" />
+    <Compile Include="SqlServer\QueryProcessors\QuestionsQueryProcessor.cs" />
     <Compile Include="SqlServer\QueryProcessors\ScoringQueryProcessor.cs" />
     <Compile Include="SqlServer\QueryProcessors\SpinWheelQueryProcessor.cs" />
     <Compile Include="SqlServer\QueryProcessors\StoresQueryProcessor.cs" />
