--- a/Source/Falcon/src/Falcon.Web.Api/Falcon.Web.Api.csproj
+++ b/Source/Falcon/src/Falcon.Web.Api/Falcon.Web.Api.csproj
@@ -232,6 +232,7 @@
     <Compile Include="JobSystem\Public\IJobManager.cs" />
     <Compile Include="JobSystem\Public\JobConfiguration.cs" />
     <Compile Include="MaintenanceProcessing\Private\AchievementMaintenanceProcessor.cs" />
+    <Compile Include="MaintenanceProcessing\Private\AnswerMaintenanceProcessor.cs" />
     <Compile Include="MaintenanceProcessing\Private\AppAdvertsMaintenanceProcessor.cs" />
     <Compile Include="MaintenanceProcessing\Private\AvatarsMaintenanceProcessor.cs" />
     <Compile Include="MaintenanceProcessing\Private\CategoriesMaintenanceProcessor.cs" />
@@ -248,6 +249,7 @@
     <Compile Include="MaintenanceProcessing\Private\UserStatsMaintenanceProcessor.cs" />
     <Compile Include="MaintenanceProcessing\Private\WatchAdMaintenanceProcessor.cs" />
     <Compile Include="MaintenanceProcessing\Public\IAchievementMaintenanceProcessor.cs" />
+    <Compile Include="MaintenanceProcessing\Public\IAnswerMaintenanceProcessor.cs" />
     <Compile Include="MaintenanceProcessing\Public\IAppAdvertsMaintenanceProcessor.cs" />
     <Compile Include="MaintenanceProcessing\Public\IAvatarsMaintenanceProcessor.cs" />
     <Compile Include="MaintenanceProcessing\Public\ICategoriesMaintenanceProcessor.cs" />
