--- a/Source/Falcon/src/Falcon.Data/Falcon.Data.csproj
+++ b/Source/Falcon/src/Falcon.Data/Falcon.Data.csproj
@@ -47,6 +47,7 @@
     <Compile Include="PagedDataRequest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="QueryProcessors\IAchievementQueryProcessor.cs" />
+    <Compile Include="QueryProcessors\IAnswerQueryProcessor.cs" />
     <Compile Include="QueryProcessors\IAvatarsQueryProcessor.cs" />
     <Compile Include="QueryProcessors\ICategoriesQueryProcessor.cs" />
     <Compile Include="QueryProcessors\ICharacteristicsQueryProcessor.cs" />
