--- a/Source/Falcon/src/Falcon.EFCommonContext/Falcon.EFCommonContext.csproj
+++ b/Source/Falcon/src/Falcon.EFCommonContext/Falcon.EFCommonContext.csproj
@@ -188,6 +188,9 @@
     <Compile Include="DbModel\QuestionBoost.cs">
       <DependentUpon>WhatIfDataModel.tt</DependentUpon>
     </Compile>
+    <Compile Include="DbModel\QuestionSelectorConfig.cs">
+      <DependentUpon>WhatIfDataModel.tt</DependentUpon>
+    </Compile>
     <Compile Include="DbModel\ReportedQuestion.cs">
       <DependentUpon>WhatIfDataModel.tt</DependentUpon>
     </Compile>
