--- a/Source/Falcon/src/Falcon.Web.Models/Falcon.Web.Models.csproj
+++ b/Source/Falcon/src/Falcon.Web.Models/Falcon.Web.Models.csproj
@@ -47,6 +47,7 @@
     <Compile Include="Api\Achievement\SAchievementStatistic.cs" />
     <Compile Include="Api\Cache\SLevelCache.cs" />
     <Compile Include="Api\ClientAppState.cs" />
+    <Compile Include="Api\Config\SQuestionSelectorConfig.cs" />
     <Compile Include="Api\Input\Questions\EditInfo.cs" />
     <Compile Include="Api\Input\Questions\RemoveInfo.cs" />
     <Compile Include="Api\Level\SLevelUpInfo.cs" />
