--- a/Source/Falcon/src/Falcon.Web.Models/Falcon.Web.Models.csproj
+++ b/Source/Falcon/src/Falcon.Web.Models/Falcon.Web.Models.csproj
@@ -46,8 +46,9 @@
   <ItemGroup>
     <Compile Include="Api\Achievement\SAchievementStatistic.cs" />
     <Compile Include="Api\Cache\SLevelCache.cs" />
-    <Compile Include="Api\ClientAppState.cs" />
+    <Compile Include="Api\Config\SClientAppState.cs" />
     <Compile Include="Api\Config\SQuestionSelectorConfig.cs" />
+    <Compile Include="Api\Config\SClientVersionInfo.cs" />
     <Compile Include="Api\Input\Questions\EditInfo.cs" />
     <Compile Include="Api\Input\Questions\RemoveInfo.cs" />
     <Compile Include="Api\Level\SLevelUpInfo.cs" />
